grpc-sb-camel-server/src/main/fabric8/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-grpc
spec:
  ports:
  - name: hello-grpc
    protocol: TCP
    port: 1080
    targetPort: 1080
  sessionAffinity: None
status:
  loadBalancer: {
    }
