grpc-sb-camel-server/src/main/fabric8/plain-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-grpc-service
spec:
  ports:
  - name: hello-grpc-port
    protocol: TCP
    port: 1080
    targetPort: 1080
  sessionAffinity: None
status:
  loadBalancer: {
    }
