grpc-sb-camel-server/src/main/fabric8/prometheus.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  ports:
  - name: prom
    protocol: TCP
    port: 9779
    targetPort: 9779
  sessionAffinity: None
status:
  loadBalancer: {
    }
